edited get phone

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             
             let message = "Hi! I'd like to order a custom package:\n\n";
             message += `Name: ${formData.get('name')}\n`;
-            message += `Name: ${formData.get('phone')}\n`;
+            message += `Phone: ${formData.get('phone')}\n`;
             message += `Type: ${formData.get('Type')}\n`;
             message += `Event: ${formData.get('eventType')}\n`;
             message += `Budget: ${formData.get('budget')}\n`;
