--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="https://res.cloudinary.com/dys8jsmag/image/upload/v1755286739/midefood/mide_logo_-removebg-preview_jbl328.png" alt="">
         <div class="hero-content">
             <h1>Custom Packages & Bulk Cooking for Every Occasion </h1>
-            <p>Birthdays, Anniversaries, Proposals, Corporate Gifts & More — Tailored to Your Taste and Budget.</p>
+            <p>Birthdays, Anniversaries, Proposals, Love Gifts & More — Tailored to Your Taste and Budget.</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">Create Your Package</a>
                 <a href="#packages" class="btn btn-secondary">View Samples</a>
@@ -72,7 +72,7 @@
                     <h3 class="package-title">Just For You Box</h3>
                     <div class="package-price">From ₦30,000</div>
                     <p class="package-description">Jollof Rice, Grilled Chicken, Fruit, Fruit Juice, Mini Card</p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20Just%20for%20you%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20Just%20for%20you%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
             <div class="package-card">
@@ -83,7 +83,7 @@
                     <h3 class="package-title">Birthday Surprise Pack</h3>
                     <div class="package-price">From ₦80,000</div>
                     <p class="package-description">Balloons, personalized card, chocolates, and a special birthday treat</p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20Birthdayt%20Suprise%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20Birthdayt%20Suprise%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
             <div class="package-card">
@@ -94,7 +94,7 @@
                     <h3 class="package-title">The Love Tray</h3>
                     <div class="package-price">From ₦50,000</div>
                     <p class="package-description">Jollof rice, Fried Rice, Fruits, Wine, Fruit Juice, BBQ, </p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20love%20tray%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20love%20tray%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
             <div class="package-card">
@@ -105,7 +105,7 @@
                     <h3 class="package-title">Benny Box</h3>
                     <div class="package-price">From ₦30,000</div>
                     <p class="package-description">Balloons, personalized card, chocolates, and a special birthday treat</p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20benny%20box%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20benny%20box%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
             <div class="package-card">
@@ -116,7 +116,7 @@
                     <h3 class="package-title">Food Box</h3>
                     <div class="package-price">From ₦25,000</div>
                     <p class="package-description">Jollof rice ,Spicy ,chicken/fish ,Cookies ,Juice</p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20food%20Box%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20food%20Box%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
             <div class="package-card">
@@ -127,7 +127,7 @@
                     <h3 class="package-title">Food Bag</h3>
                     <div class="package-price">From ₦25,000</div>
                     <p class="package-description">A plate of fried rice and chicken (choose the food of your choice) and chilled drink </p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20food%20bag%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20food%20bag%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
             <div class="package-card">
@@ -138,7 +138,7 @@
                     <h3 class="package-title">Delight Box</h3>
                     <div class="package-price">From ₦40,000</div>
                     <p class="package-description">Jollof/ fried rice ,Pepper turkey/ chicken ,Fruits ,Pringles ,Chocolates ,Juice</p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20delight%20box%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20delight%20box%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
             <div class="package-card">
@@ -150,7 +150,7 @@
                     <div class="package-price">From ₦25,000</div>
                     <p class="package-description">Provisions, Fruits, Chocolates & cookies
                      <span>Note: we can curate according to your preferences</span></p>
-                    <a href="https://wa.me/2349014307081?text=HI%0Ai%20would%20like%20to%20get%20the%20Mide's%20hamper%20package" class="btn btn-primary">Get This</a>
+                    <a href="https://wa.me/2349014307081?text=Hi%0AI%20would%20like%20to%20get%20the%20Mide's%20hamper%20package" class="btn btn-primary">Get This</a>
                 </div>
             </div>
         </div>
